welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: illegal start of statement (no modifiers allowed here)
override def run() {
^MethodsPicture:89: error: Unmatched closing brace '}' ignored here
}
^MethodsPicture:92: error: eof expected but '}' found.
}
^